@@ -98,13 +98,15 @@ The default \code{Effect.default} may work with some modeling functions, as woul
 The \code{effect} package has five functions that create the information needed for drawing effects plots, \code{Effect}, \code{allEffects}, \code{effect} and \code{predictorEffect} and \code{predictorEffects}.  To add new modeling to the package only a new \code{Effect} needs to be written; the package will take care of all the other functions.
 
 \section{Using \code{effects} with Other Modeling Methods, with Generalized Least Squares in the \pkg{nlme} package as an Example}\label{gls}
-Applying \code{effects} to other than \code{lm} and \code{glm} objects \emph{may} require writing an method for the \code{Effect} generic function for that type of model object.  For example, the \code{gls} function in the \code{nlme} package \citep{nlme} fits linear models via generalized least squares.  A call to \code{gls} creates an object of class \code{gls}.  The following method of \code{Effect} for \code{gls} objects finds the information needed to draw effects plots from \code{gls} objects:
+Applying \code{effects} to other than \code{lm} and \code{glm} objects may require writing an method for the \code{Effect} generic function for that type of model object.  For example, the \code{gls} function in the \code{nlme} package \citep{nlme} fits linear models via generalized least squares.  A call to \code{gls} creates an object of class \code{gls}.  The following method of \code{Effect} for \code{gls} objects finds the information needed to draw effects plots from \code{gls} objects:
 
 <<eval=FALSE>>=
 Effect.gls <- function(focal.predictors, mod, ...){
+  cl <- mod$call
+  cl$weights <- NULL
   args <- list(
     type = "glm",
-    call = mod$call,
+    call = cl,
     formula = formula(mod),
     family = NULL,
     coefficients = coef(mod),
@@ -116,15 +118,19 @@ Effect.gls <- function(focal.predictors, mod, ...){
 This function simply harvests the needed information into a variable \code{sources}, and then passes to the result to the default \code{Effect} method.  The  three required arguments to the method are: \code{focal.predictors} and \code{mod} that match the first two arguments of \code{Effect.default}, and  \code{...} that matches all other arguments.  The list \code{sources} has up to 6 named elements and is created in the function:
 \begin{description}
 \item[\texttt{type}] The \code{effects} package has three basic modeling functions:  \code{type = "glm"}, the default, is used for functions with a univariate response and a linear predictor and possibly a link function.  This class includes linear models, generalized linear models, robust regression, generalized least squares fitting, linear and generalized linear mixed effects models, and many others. The \code{type = "polr"} is used for ordinal regression models, as in the \code{polr} function in the \code{MASS} package, and similar methods described below in Section~\ref{polr}.  The The \code{type = "multinom"} for multinomial log-linear models as fit by the \code{multinom} function in \code{nnet}, and to polytomous latent class models created with the \code{poLCA} function in the \pkg{poLCA} package.
+
 \item[\code{call}] The \code{Effect.default} method uses the call to harvest additional arguments that it needs.  For \code{type="glm"}, these arguments are \code{formula}, \code{data}, \code{contrasts},  \code{subset},
-\code{family}, and \code{offset}, although only the \code{formula} argument is required.  The default is \code{mod\$call} for S3 objects and \code{mod@call} for S4 objects.
+\code{family}, \code{weights}, and \code{offset}, although only the \code{formula} argument is required.  The \code{gls} function includes an optional \code{weights} argument that is used differently from the \code{weights} argument for a generalized linear model and is not needed for computing effects or predictor effects plots.  In the function shown above the call is modified by setting \code{weights=NULL}.  
+
+The default for \code{call} is \code{mod\$call} for S3 objects and \code{mod@call} for S4 objects.
+
 \item[\code{formula}] In most cases the formula for the linear predictor is returned by \code{formula(mod)}, the default, but if this is not the case the value of this argument should be the value of the formula for fixed effects.
 \item[\code{family}] The default is \code{family=NULL}.  This argument is required for GLM-like models that include a \code{family} that specifies both an error distribution and a link function only if \code{family=family(mod)} is not appropriate.  See the \code{betareg} example in Section~\ref{betareg} below for an example that includes a user-selected link function, but a fixed error distribution.
 \item[\code{coefficients}] In many cases the (fixed-effect) coefficient estimates are returned by \code{coef(mod)}, the default, but if this is not the case then the value of this argument should be the estimates of the coefficients in the linear predictor. The functions in the \pkg{effects} package do not use estimates of random effects.
 \item[\code{vcov}] In many cases the estimated covariance matrix of the (fixed-effect) coefficient estimates is  returned by \code{vcov(mod)}, the default, but if this is not the case then the value of this argument should be the estimated covariance matrix of the (fixed-effect) coefficient estimates in the linear predictor.
 \item[method] This argument is used only for methods that use effects graphics based on the \code{polr} function, where the argument \code{method} is the name of a link function; see \code{help(polr)} for a list of the accepted links, and see Section~\ref{clm} below for an example.
 \end{description}
-\emph{Since the values of all the arguments in \code{sources} are default values for the \code{gls} method, there is no need to have written the \code{Effect.gls} method, as the default method would work.} 
+The only non-default argument in \code{sources} is the modification of the \code{call} to omit weights in the call to \code{gls}.  Without this change, there is no need to have written the \code{Effect.gls} method, as the default method would have worked. 
 
 <<fig.height=4,fig.width=8>>=
 library(effects)
